--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     env_file: .env
     ports:
       - "8000:8000"
+    environment:
+      PYTHONPATH: /app
     volumes:
       - .:/app
       - ./var/log:/var/log/app
