--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       interval: 3s
       timeout: 3s
       retries: 20
-
+  
   api:
     build:
       context: .
@@ -32,6 +32,22 @@ services:
         condition: service_healthy
     command: >
       uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+  
+  collector:
+    build:
+      context: .
+      dockerfile: docker/app.Dockerfile
+    env_file: .env
+    environment:
+      PYTHONPATH: /app
+    volumes:
+      - .:/app
+      - ./var/log:/var/log/app
+    depends_on:
+      db:
+        condition: service_healthy
+    command: >
+      python -m app.services.collector    
 
 volumes:
   pg_data:
